<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="pbl2.cursoandroid.com.pbl2.FormularioTurma"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/cadastrarTurma"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txtNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nomeTurma"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/txtNomeTurmaId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="" />

        <TextView
            android:id="@+id/txtAnoId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/idSessao"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/AnoId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastrar"
            android:id="@+id/botaoCadastrarId"/>
    </LinearLayout>
</ScrollView>
